// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField renders 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 0px;
  border-style: solid;
  border-color: #c0cad5;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #c0cad5;
  box-shadow: 0 0 0 1px #c0cad5;
}

.c2::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c2::-moz-placeholder {
  color: #4f6f8f;
}

.c2:-ms-input-placeholder {
  color: #4f6f8f;
}

.c2::placeholder {
  color: #4f6f8f;
}

.c2::-ms-clear {
  display: none;
}

.c2:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

.c0 {
  font-size: 10px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  display: block;
  width: 100%;
  margin: 0;
  margin-bottom: -20px;
  margin-left: 12px;
  padding-top: 6px;
  font-size: 10px;
  color: #4f6f8f;
  font-weight: 700;
}

<div>
  <label
    className="c0"
    color="gray"
    fontSize={10}
    fontWeight="bold"
    htmlFor="email"
    style={
      Object {
        "height": 20,
        "opacity": 1,
        "transitionDuration": ".1s",
        "transitionProperty": "opacity",
      }
    }
  >
    Email Address
  </label>
  <div
    className="c1"
  >
    <input
      className="c2"
      id="email"
      style={
        Object {
          "paddingBottom": 8,
          "paddingLeft": undefined,
          "paddingRight": undefined,
          "paddingTop": 20,
          "transitionDuration": ".1s",
          "transitionProperty": "padding-top, padding-bottom",
        }
      }
    />
  </div>
</div>
`;

exports[`FormField renders with Icon 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 0px;
  border-style: solid;
  border-color: #c0cad5;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #c0cad5;
  box-shadow: 0 0 0 1px #c0cad5;
}

.c3::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c3::-moz-placeholder {
  color: #4f6f8f;
}

.c3:-ms-input-placeholder {
  color: #4f6f8f;
}

.c3::placeholder {
  color: #4f6f8f;
}

.c3::-ms-clear {
  display: none;
}

.c3:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

.c0 {
  font-size: 10px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  display: block;
  width: 100%;
  margin: 0;
  margin-bottom: -20px;
  margin-left: 40px;
  padding-top: 6px;
  font-size: 10px;
  color: #4f6f8f;
  font-weight: 700;
}

<div>
  <label
    className="c0"
    color="gray"
    fontSize={10}
    fontWeight="bold"
    htmlFor="email"
    style={
      Object {
        "height": 20,
        "opacity": 1,
        "transitionDuration": ".1s",
        "transitionProperty": "opacity",
      }
    }
  >
    Email Address
  </label>
  <div
    className="c1"
  >
    <svg
      className="c2"
      fill="currentcolor"
      height={24}
      style={
        Object {
          "alignSelf": "center",
          "flex": "none",
          "marginLeft": 8,
          "marginRight": -32,
          "pointerEvents": "none",
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
    <input
      className="c3"
      id="email"
      name="email"
      style={
        Object {
          "paddingBottom": 8,
          "paddingLeft": 40,
          "paddingRight": undefined,
          "paddingTop": 20,
          "transitionDuration": ".1s",
          "transitionProperty": "padding-top, padding-bottom",
        }
      }
    />
  </div>
</div>
`;

exports[`FormField renders with Label autoHide prop 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 0px;
  border-style: solid;
  border-color: #c0cad5;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #c0cad5;
  box-shadow: 0 0 0 1px #c0cad5;
}

.c3::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c3::-moz-placeholder {
  color: #4f6f8f;
}

.c3:-ms-input-placeholder {
  color: #4f6f8f;
}

.c3::placeholder {
  color: #4f6f8f;
}

.c3::-ms-clear {
  display: none;
}

.c3:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

.c0 {
  font-size: 10px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  display: block;
  width: 100%;
  margin: 0;
  margin-bottom: -20px;
  margin-left: 40px;
  padding-top: 6px;
  font-size: 10px;
  color: #4f6f8f;
  font-weight: 700;
}

<div>
  <label
    className="c0"
    color="gray"
    fontSize={10}
    fontWeight="bold"
    htmlFor="email"
    style={
      Object {
        "height": 20,
        "opacity": 0,
        "transitionDuration": ".1s",
        "transitionProperty": "opacity",
      }
    }
  >
    Email
  </label>
  <div
    className="c1"
  >
    <svg
      className="c2"
      fill="currentcolor"
      height={24}
      style={
        Object {
          "alignSelf": "center",
          "flex": "none",
          "marginLeft": 8,
          "marginRight": -32,
          "pointerEvents": "none",
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
    <input
      className="c3"
      id="email"
      name="email"
      style={
        Object {
          "paddingBottom": 14,
          "paddingLeft": 40,
          "paddingRight": undefined,
          "paddingTop": 14,
          "transitionDuration": ".1s",
          "transitionProperty": "padding-top, padding-bottom",
        }
      }
    />
  </div>
</div>
`;

exports[`FormField renders with Select  1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-left: -32px;
  color: gray;
}

.c3 {
  pointer-events: none;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #c0cad5;
  margin: 0px;
  padding-left: 12px;
  padding-right: 32px;
  padding-top: 14px;
  padding-bottom: 14px;
  font-size: 14px;
}

.c2:focus {
  outline: none;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      width={1}
    >
      <select
        className="c2"
        fontSize={1}
        style={
          Object {
            "paddingBottom": 14,
            "paddingLeft": undefined,
            "paddingRight": undefined,
            "paddingTop": 14,
            "transitionDuration": ".1s",
            "transitionProperty": "padding-top, padding-bottom",
          }
        }
      />
      <svg
        className="c3 c4"
        color="gray"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M7.4 8l4.6 4.6L16.6 8 18 9.4l-6 6-6-6L7.4 8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`FormField renders with Select and Icon 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c5 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-left: -32px;
  color: gray;
}

.c4 {
  pointer-events: none;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #c0cad5;
  margin: 0px;
  padding-left: 12px;
  padding-right: 32px;
  padding-top: 14px;
  padding-bottom: 14px;
  font-size: 14px;
}

.c3:focus {
  outline: none;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

<div>
  <div
    className="c0"
  >
    <svg
      className="c1"
      fill="currentcolor"
      height={24}
      style={
        Object {
          "alignSelf": "center",
          "flex": "none",
          "marginLeft": 8,
          "marginRight": -32,
          "pointerEvents": "none",
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
    <div
      className="c2"
      width={1}
    >
      <select
        className="c3"
        fontSize={1}
        style={
          Object {
            "paddingBottom": 14,
            "paddingLeft": 40,
            "paddingRight": undefined,
            "paddingTop": 14,
            "transitionDuration": ".1s",
            "transitionProperty": "padding-top, padding-bottom",
          }
        }
      />
      <svg
        className="c4 c5"
        color="gray"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M7.4 8l4.6 4.6L16.6 8 18 9.4l-6 6-6-6L7.4 8z"
        />
      </svg>
    </div>
  </div>
</div>
`;
